[package]
name = "axum_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["json"]}
http = "0.2.9"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
serde = {version = "1.0.188", features = ["derive"]}

tower-http = { version = "0.4.4", features=["timeout", "trace", "util", "fs"]}
tracing-subscriber = { version = "0.3.17", features=["fmt", "std"]}
tower-sessions = { version = "0.6.0", features = ["redis-store"] }
fred = "7.0.0"
time = "0.3.30"
